python/testData/quickFixes/PyAddImportQuickFixTest/qualifyNestedClassWithAlreadyImportedModule/main.py
<warning descr="Unused import statement 'from pkg import src'">from pkg import src</warning>

<error descr="Unresolved reference 'Inner'">In<caret>ner</error>
